...
    
    var title: String {
        switch self {
        case .acceptFriend(let username):
            return username
        case .loginRequired:
            return "로그인 필요"
        case .logout:
            return "로그아웃"
        case .deleteAccount:
            return "계정삭제"
        case .updateOptional, .updateMandatory:
            return "새로운 버전 안내"
        }
    }
...
