...
        .cornerRadius(8)
        .padding(.horizontal)
    }
    
    private var header: some View {
        HStack (alignment: .center){
            Text("MY")
                .font(._headline2)
                .foregroundStyle(.gray90)
            
            Spacer()
            
            Button(action: { withAnimation { viewModel.toggleMode() } }
...
                            .foregroundStyle(.gray90)
                    }
                }
            }
            
            NavigationLink(destination: SettingsView()) {
                Image(systemName: "gearshape.fill")
                    .resizable()
                    .frame(width: 24, height:24)
                    .foregroundColor(.gray90)
                    .padding(12)
            }
        }
...
